--- a/vehicleService/src/main/resources/application.properties
+++ b/vehicleService/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=vehicleService
+
+#  http://localhost:8083/api/vehicles/register
+#
+#  {
+#    "licensePlate": "ABC-1234",
+#    "type": "Car",
+#    "status": "exited",
+#    "userId": 101,
+#    "entryTime": "2025-06-19T10:30:00",
+#    "exitTime": "2025-06-19T12:45:00"
+#  }
+
+#get=
+#  http://localhost:8083/api/vehicles
+#
+#update=
+#  http://localhost:8083/api/vehicles/1
+
