--- a/vehicleService/src/main/resources/application.properties
+++ b/vehicleService/src/main/resources/application.properties
@@ -16,4 +16,9 @@ spring.application.name=vehicleService
 #
 #update=
 #  http://localhost:8083/api/vehicles/1
+#
+#delete=
+#   http://localhost:8083/api/vehicles/1
 
+#getById=
+#    http://localhost:8083/api/vehicles/2
