add config repo url

--- a/configServer/src/main/resources/application.yml
+++ b/configServer/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     config:
       server:
         git:
-          uri:
+          uri: https://github.com/divyanjalee200178/SmartParkingManagementServiceRepo
           clone-on-start: true
 
 
